
This is a snapshot of NetworkManager development. The API is
subject to change and not guaranteed to be compatible with
the later release.
USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!

* Add systemd services to provide networking in the initrd.
* Introduce a new "ovs-dpdk.lsc-interrupt" property to configure the
  Link State Change (LSC) detection mode for OVS DPDK interfaces.

=============================================
NetworkManager-1.52
Overview of changes since NetworkManager-1.50
=============================================

* Store interactive history in `$XDG_CACHE_HOME/nmcli-history` instead of
  `~/.nmcli-history`
* Add new ipv4.link-local=fallback to set an IPv4 link-local address
  when no other IPv4 is set.
* Remove support for building with Autotools
* Add IPVLAN interface support
* Allow to manually configure the authentication of LTE's initial EPS Bearer.
* Add support for the "IPv6-only preferred" DHCPv4 option (RFC 8925),
  used to indicate that a host supports an IPv6-only mode and is
  willing to forgo obtaining an IPv4 address if the network provides
  IPv6 connectivity.
* Support automatically adding routes to DNS servers via the
  ipv4.routed-dns and ipv6.routed-dns properties; when enabled, each
  name server is reached only via the device that specifies it.
* Support OCI in nm-cloud-setup
* Added support for ethtool FEC mode
* Add new ipv4.shared-dhcp-range and ipv4.shared-dhcp-lease-time,
  which allows you to customize the DHCP range and lease time offered
  by DHCP server in `shared` connection method.
* DNS servers can now be specified with a URI-like syntax which supports
  DNS over TLS name servers.
* The initrd-generator understands the "rd.net.dns" option to configure
  global name servers.
* Drop support for the "dhcpcanon" DHCP client.
* global-dns configuration section now has 2 additional keys: "resolve-mode"
  and "certification-authority".
* Dnsconfd plugin can now be used for configuration of system-wide DNS